--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,9 @@
 .exercise-row {
     margin-bottom: 5px;
 }
+.exercise-row > p {
+    display: inline;
+}
 
 .exercise-elm {
     -webkit-app-region: no-drag;
